--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon Mar 25 2024 21:45:30 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Apr 19 2024 00:09:37 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="656504e52e383d09efa77703" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -152,7 +152,7 @@
         </div>
         <div id="w-node-_94b3c992-6e84-9ddb-59fb-4a4d840429dc-efa77703" class="pricing-card-three"><img src="images/Color_128_Supporter_Yellow.png" loading="lazy" alt="" class="pricing-image">
           <h3 class="heading-13">$20/Month: Trailblazer</h3>
-          <p class="pricing-card-text">- 100 GB of storage space (avatars, items, assets, worlds...)<br><br>- 1 group (for sharing content with others)<br><br>- 1 custom exit message (randomly shown to all users)<br><br>- Headless Server<br><br>- Custom 2D badge (in-game)<br><br>- Custom 3D badge (in-game)<br><br>- Prominent shout-out<br><br>- Discord access<br>‍<br> </p>
+          <p class="pricing-card-text">- 100 GB of storage space (avatars, items, assets, worlds...)<br><br>- 1 group (for sharing content with others)<br><br>- 1 custom exit message (randomly shown to all users)<br><br>- Headless Server Software (A piece of software to allow users to host their own servers, NOT a dedicated server that we host for you)<br><br>- Custom 2D badge (in-game)<br><br>- Custom 3D badge (in-game)<br><br>- Prominent shout-out<br><br>- Discord access<br>‍<br> </p>
           <a href="https://www.patreon.com/resonite" target="_blank" class="text-link-arrow w-inline-block">
             <div class="text-block-23">Learn more</div>
             <div class="arrow-embed-2 w-embed"><svg width="20" height="20" viewbox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -162,7 +162,7 @@
         </div>
         <div id="w-node-_94b3c992-6e84-9ddb-59fb-4a4d840429e6-efa77703" class="pricing-card-three"><img src="images/Color_128_Supporter_Yellow.png" loading="lazy" alt="" class="pricing-image">
           <h3 class="heading-14">$75/Month: Builder</h3>
-          <p class="pricing-card-text">- 500 GB of shareable storage space (avatars, items, assets, worlds...)<br>‍<br>- 2 groups (for sharing content with others)<br>‍<br>- 2 custom exit messages (randomly shown to all users)<br><br>- Headless Server<br><br>- Custom 2D badge (in-game)<br><br>- Custom 3D badge (in-game)<br><br>- Verbal (where possible) / Prominent shout-out<br><br>- Discord access </p>
+          <p class="pricing-card-text">- 500 GB of shareable storage space (avatars, items, assets, worlds...)<br>‍<br>- 2 groups (for sharing content with others)<br>‍<br>- 2 custom exit messages (randomly shown to all users)<br><br>- Headless Server Software (A piece of software to allow users to host their own servers, NOT a dedicated server that we host for you)<br><br>- Custom 2D badge (in-game)<br><br>- Custom 3D badge (in-game)<br><br>- Verbal (where possible) / Prominent shout-out<br><br>- Discord access </p>
           <a href="https://www.patreon.com/resonite" class="text-link-arrow w-inline-block">
             <div class="text-block-24">Learn more</div>
             <div class="arrow-embed-2 w-embed"><svg width="20" height="20" viewbox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
