--- a/detail_event.html
+++ b/detail_event.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Fri Apr 19 2024 00:09:37 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  --><!--  Last Published: Fri May 03 2024 18:51:36 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65664ee7e67dfc2e07ea8097" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
