--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Fri Apr 19 2024 00:09:37 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  --><!--  Last Published: Fri May 03 2024 18:51:36 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="656504e52e383d09efa77703" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -84,7 +83,7 @@
                 <a href="https://yellowdogman.com/contact.html" target="_blank" class="nav-link">Contact</a>
               </li>
               <li>
-                <a href="http://resonite.com/Resonite_PressKit_121923.zip" class="nav-link">Press Kit</a>
+                <a href="http://resonite.com/Resonite_PressKit_050324.zip" class="nav-link">Press Kit</a>
               </li>
               <li class="list-item-2">
                 <a href="https://store.steampowered.com/app/2519830/Resonite/" class="button-6 w-button">Download</a>
