Create a policy page on our content licenses.

--- a/policies/Changelog.html
+++ b/policies/Changelog.html
@@ -15,10 +15,16 @@
         <h1>Policy Changelog</h1>
         <p>For transparency, a list of changes to our polices are presented here.</p>
         <section>
+            <h2>June 8th 2024 - Content Licenses</h2>
+            <p>We have added our content licenses as a policy page to further clarify how we license our content made for the Resonite platform for our users and other content creators.</p>
+            <p>This includes exceptions to our standard content license, for example content made by team members for personal projects or unless otherwise specified for a piece of content.</p>
+            <p>You may review this text on <a href="https://github.com/Yellow-Dog-Man/Resonite-Website/blob/main/policies/ContentLicense.html">GitHub</a></p>
+        </section>
+        <section>
             <h2>February 14th 2024 - User Guidelines</h2>
             <p>We have made a small wording tweak to our user guidelines, in order to provide additional clarity on our adult content guidelines. The changed text is displayed below, but can also be reviewed on <a href="https://github.com/Yellow-Dog-Man/Resonite-Website/blob/main/policies/Guidelines.html">GitHub</a>.</p>
 
-            <p>Sexually explicit content <strong></strong>and activity, including kink or fetish related activity</strong> is only permitted in sessions that fit the following listed criteria:</p>
+            <p>Sexually explicit content <strong>and activity, including kink or fetish related activity</strong> is only permitted in sessions that fit the following listed criteria:</p>
         </section>
         <section>
             <h2>18th October 2023 - Terms of Service</h2>
