--- a/policies/index.html
+++ b/policies/index.html
@@ -20,6 +20,7 @@
             <li><a href="EULA.html">EULA</a></li>
             <li><a href="Guidelines.html">User Guidelines</a></li>
             <li><a href="Security.html">Security Policy</a></li>
+            <li><a href="ContentLicense.html">Content Licenses</a></li>
             <li>Mod & Plugin Policy: Coming Soon!</li>
         </ul>
 
