--- a/features.html
+++ b/features.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  --><!--  Last Published: Fri May 03 2024 18:51:36 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Jul 26 2024 21:30:09 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6565266954e064f8c40d89ac" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -23,7 +23,7 @@
     <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 767px) 159px, (max-width: 991px) 21vw, 16vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 70vw, (max-width: 991px) 158.99620056152344px, 10vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
@@ -31,6 +31,9 @@
               </li>
               <li>
                 <a href="https://www.patreon.com/Resonite" target="_blank" class="nav-link">Patreon</a>
+              </li>
+              <li>
+                <a href="licensing.html" class="nav-link">Licensing</a>
               </li>
               <li>
                 <div data-hover="false" data-delay="0" class="nav-dropdown w-dropdown">
@@ -42,7 +45,6 @@
                     <a href="features.html" aria-current="page" class="nav-dropdown-link w-dropdown-link w--current">Features</a>
                     <a href="case-studies.html" class="nav-dropdown-link w-dropdown-link">Case Studies</a>
                     <a href="https://resonite.com/policies/" target="_blank" class="nav-dropdown-link w-dropdown-link">Policies</a>
-                    <a href="licensing.html" target="_blank" class="nav-dropdown-link w-dropdown-link">Licensing</a>
                   </nav>
                 </div>
               </li>
@@ -82,10 +84,13 @@
                 </div>
               </li>
               <li>
+                <a href="experimental-pages/careers.html" class="nav-link">Careers</a>
+              </li>
+              <li>
                 <a href="https://yellowdogman.com/contact.html" target="_blank" class="nav-link">Contact</a>
               </li>
               <li>
-                <a href="http://resonite.com/Resonite_PressKit_050324.zip" class="nav-link">Press Kit</a>
+                <a href="http://resonite.com/Resonite_PressKit_061424.zip" class="nav-link">Press Kit</a>
               </li>
               <li class="list-item-2">
                 <a href="https://store.steampowered.com/app/2519830/Resonite/" class="button-6 w-button">Download</a>
@@ -131,7 +136,7 @@
   <section class="hero-heading-right-3-copy-2">
     <div class="container-2">
       <div class="hero-wrapper-2">
-        <div class="hero-split"><img src="images/Protoflux_Logo_Color_1080.png" loading="lazy" sizes="30.916667938232422px" srcset="images/Protoflux_Logo_Color_1080-p-500.png 500w, images/Protoflux_Logo_Color_1080-p-800.png 800w, images/Protoflux_Logo_Color_1080-p-1080.png 1080w, images/Protoflux_Logo_Color_1080.png 1081w" alt="" class="image-3"></div>
+        <div class="hero-split"><img src="images/Protoflux_Logo_Color_1080.png" loading="lazy" sizes="(max-width: 767px) 94vw, (max-width: 991px) 92vw, 43vw" srcset="images/Protoflux_Logo_Color_1080-p-500.png 500w, images/Protoflux_Logo_Color_1080-p-800.png 800w, images/Protoflux_Logo_Color_1080-p-1080.png 1080w, images/Protoflux_Logo_Color_1080.png 1081w" alt="" class="image-3"></div>
         <div class="hero-split">
           <h2 class="heading-4">Visual Scripting</h2>
           <p class="margin-bottom-24px-copy">ProtoFlux is the crown jewel of our creative tools - the most powerful visual programming language that our experienced team has designed to date, which lets you quickly prototype and build anything from simple interactions to complex games and systems - with full real-time collaboration support and immediate feedback. Build anything from avatar and world interactivity, to complex systems, and games.</p>
@@ -154,7 +159,7 @@
   <section class="hero-heading-right-3">
     <div class="container-2">
       <div class="hero-wrapper-2">
-        <div class="hero-split"><img src="images/Features_ContentSharing_01.jpg" loading="lazy" sizes="100vw" srcset="images/Features_ContentSharing_01-p-500.jpg 500w, images/Features_ContentSharing_01-p-800.jpg 800w, images/Features_ContentSharing_01-p-1080.jpg 1080w, images/Features_ContentSharing_01-p-1600.jpg 1600w, images/Features_ContentSharing_01.jpg 1920w" alt="" class="shadow-two-3"></div>
+        <div class="hero-split"><img src="images/Features_ContentSharing_01.jpg" loading="lazy" sizes="(max-width: 767px) 94vw, (max-width: 991px) 92vw, 43vw" srcset="images/Features_ContentSharing_01-p-500.jpg 500w, images/Features_ContentSharing_01-p-800.jpg 800w, images/Features_ContentSharing_01-p-1080.jpg 1080w, images/Features_ContentSharing_01-p-1600.jpg 1600w, images/Features_ContentSharing_01.jpg 1920w" alt="" class="shadow-two-3"></div>
         <div class="hero-split">
           <h2 class="heading-4">Content Sharing</h2>
           <p class="margin-bottom-24px-copy">Browse your own and others content! Save others (with proper permissions) and your own creations. Upload files directly from your local files into a session, view and modify it with others!</p>
@@ -180,7 +185,7 @@
           <p class="margin-bottom-24px">Resonite allows you to share, build, and collect interactive custom avatars! (Legs included.)</p>
           <a data-w-id="24bc94ad-e60b-4c67-4cd0-13a1a103e402" style="opacity:0" href="https://resonite.com/404.html" class="button-primary-copy-under-construction w-button">Coming Soon</a>
         </div>
-        <div class="hero-split"><img src="images/2023-11-10-00.56.08.jpg" loading="lazy" sizes="100vw" srcset="images/2023-11-10-00.56.08-p-500.jpg 500w, images/2023-11-10-00.56.08-p-800.jpg 800w, images/2023-11-10-00.56.08-p-1080.jpg 1080w, images/2023-11-10-00.56.08-p-1600.jpg 1600w, images/2023-11-10-00.56.08-p-2000.jpg 2000w, images/2023-11-10-00.56.08-p-2600.jpg 2600w, images/2023-11-10-00.56.08-p-3200.jpg 3200w, images/2023-11-10-00.56.08.jpg 3840w" alt="" class="shadow-two"></div>
+        <div class="hero-split"><img src="images/2023-11-10-00.56.08.jpg" loading="lazy" sizes="(max-width: 767px) 94vw, (max-width: 991px) 92vw, 43vw" srcset="images/2023-11-10-00.56.08-p-500.jpg 500w, images/2023-11-10-00.56.08-p-800.jpg 800w, images/2023-11-10-00.56.08-p-1080.jpg 1080w, images/2023-11-10-00.56.08-p-1600.jpg 1600w, images/2023-11-10-00.56.08-p-2000.jpg 2000w, images/2023-11-10-00.56.08-p-2600.jpg 2600w, images/2023-11-10-00.56.08-p-3200.jpg 3200w, images/2023-11-10-00.56.08.jpg 3840w" alt="" class="shadow-two"></div>
       </div>
     </div>
   </section>
