--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  --><!--  Last Published: Fri May 03 2024 18:51:36 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Jul 26 2024 21:30:09 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="656504e52e383d09efa77703" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -21,7 +21,7 @@
     <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 767px) 159px, (max-width: 991px) 21vw, 16vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 70vw, (max-width: 991px) 158.99620056152344px, 10vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
@@ -29,6 +29,9 @@
               </li>
               <li>
                 <a href="https://www.patreon.com/Resonite" target="_blank" class="nav-link">Patreon</a>
+              </li>
+              <li>
+                <a href="licensing.html" class="nav-link">Licensing</a>
               </li>
               <li>
                 <div data-hover="false" data-delay="0" class="nav-dropdown w-dropdown">
@@ -40,7 +43,6 @@
                     <a href="features.html" class="nav-dropdown-link w-dropdown-link">Features</a>
                     <a href="case-studies.html" class="nav-dropdown-link w-dropdown-link">Case Studies</a>
                     <a href="https://resonite.com/policies/" target="_blank" class="nav-dropdown-link w-dropdown-link">Policies</a>
-                    <a href="licensing.html" target="_blank" class="nav-dropdown-link w-dropdown-link">Licensing</a>
                   </nav>
                 </div>
               </li>
@@ -80,10 +82,13 @@
                 </div>
               </li>
               <li>
+                <a href="experimental-pages/careers.html" class="nav-link">Careers</a>
+              </li>
+              <li>
                 <a href="https://yellowdogman.com/contact.html" target="_blank" class="nav-link">Contact</a>
               </li>
               <li>
-                <a href="http://resonite.com/Resonite_PressKit_050324.zip" class="nav-link">Press Kit</a>
+                <a href="http://resonite.com/Resonite_PressKit_061424.zip" class="nav-link">Press Kit</a>
               </li>
               <li class="list-item-2">
                 <a href="https://store.steampowered.com/app/2519830/Resonite/" class="button-6 w-button">Download</a>
@@ -175,15 +180,15 @@
   <section class="footer-dark-3">
     <div class="container-9">
       <div class="footer-wrapper-2">
-        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 82vw, 159px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
+        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 82vw, 158.99620056152344px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
         <div class="footer-content-2">
-          <div id="w-node-_64ee8472-d36f-cdd2-0ed6-b51224e73e20-efa77703" class="footer-block-2">
+          <div id="w-node-_5993f6c7-141f-9a06-cb94-63b781692eab-81692e9e" class="footer-block-2">
             <div class="title-small-2">Company</div>
             <a href="https://www.patreon.com/Resonite" class="footer-link-2">Support Us</a>
             <a href="https://resonite.com/policies/" target="_blank" class="footer-link-2">Policies</a>
             <a href="https://yellowdogman.com/contact.html" class="footer-link-2">Contact</a>
           </div>
-          <div id="w-node-_64ee8472-d36f-cdd2-0ed6-b51224e73e34-efa77703" class="footer-block-2">
+          <div id="w-node-_5993f6c7-141f-9a06-cb94-63b781692eb4-81692e9e" class="footer-block-2">
             <div class="title-small-2">Resources</div>
             <a href="https://support.resonite.com/open.php" class="footer-link-2">Get Technical Support</a>
             <a href="https://moderation.resonite.com/open.php" target="_blank" class="footer-link-2">Submit Moderation Ticket</a>
