Website Update 1.4.1 Hotfix
- Fixed Marketing and Design Apprenticeship page slug

--- a/experimental-pages/careers.html
+++ b/experimental-pages/careers.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Jul 26 2024 21:30:09 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Jul 26 2024 21:38:24 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66a4081478a4c64b373750a3" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -110,7 +110,7 @@
       <div id="w-node-c97ba7f9-bd5c-2652-d991-8bf277ba70d4-373750a3" class="fn-faq-dark-wrapper">
         <h1 id="w-node-c97ba7f9-bd5c-2652-d991-8bf277ba70d5-373750a3" class="heading-8-copy-copy">Marketing and Design Apprenticeship</h1>
         <h1 id="w-node-c97ba7f9-bd5c-2652-d991-8bf277ba70d7-373750a3" class="heading-8-copy-copy-copy">Part-time, 3-6 months, $1000k/ month</h1>
-        <a href="../careers/jobs.html" class="button-6 w-button">Learn More</a>
+        <a href="../careers/marketing-and-design-apprenticeship.html" class="button-6 w-button">Learn More</a>
       </div>
     </div>
     <div id="w-node-c97ba7f9-bd5c-2652-d991-8bf277ba70db-373750a3" class="w-layout-blockcontainer container-24 w-container">
