Website Update 1.4.2 Hotfix
- Moved careers out of experimental pages folder
- Updated wording on job listing to include more wording around including a portfolio link

--- a/case-studies.html
+++ b/case-studies.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Jul 26 2024 21:38:24 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Jul 26 2024 22:04:56 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="656539d3fe23ca7ddda57eb1" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -84,7 +84,7 @@
                 </div>
               </li>
               <li>
-                <a href="experimental-pages/careers.html" class="nav-link">Careers</a>
+                <a href="careers.html" class="nav-link">Careers</a>
               </li>
               <li>
                 <a href="https://yellowdogman.com/contact.html" target="_blank" class="nav-link">Contact</a>
