--- a/careers.html
+++ b/careers.html
@@ -109,7 +109,7 @@
       <h1 id="w-node-c97ba7f9-bd5c-2652-d991-8bf277ba70d2-373750a3" class="heading-20">Keep an eye on our discord and socials for future opportunities!</h1>
       <div id="w-node-c97ba7f9-bd5c-2652-d991-8bf277ba70d4-373750a3" class="fn-faq-dark-wrapper">
         <h1 id="w-node-c97ba7f9-bd5c-2652-d991-8bf277ba70d5-373750a3" class="heading-8-copy-copy">Marketing and Design Apprenticeship</h1>
-        <h1 id="w-node-c97ba7f9-bd5c-2652-d991-8bf277ba70d7-373750a3" class="heading-8-copy-copy-copy">Part-time, 3-6 months, $1000k/ month</h1>
+        <h1 id="w-node-c97ba7f9-bd5c-2652-d991-8bf277ba70d7-373750a3" class="heading-8-copy-copy-copy">Part-time, 3-6 months, $1000/ month</h1>
         <a href="careers/marketing-and-design-apprenticeship.html" class="button-6 w-button">Learn More</a>
       </div>
     </div>
