--- a/careers.html
+++ b/careers.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Jul 29 2024 20:08:06 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Aug 12 2024 19:24:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66a4081478a4c64b373750a3" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -109,8 +109,8 @@
       <h1 id="w-node-c97ba7f9-bd5c-2652-d991-8bf277ba70d2-373750a3" class="heading-20">Keep an eye on our discord and socials for future opportunities!</h1>
       <div id="w-node-c97ba7f9-bd5c-2652-d991-8bf277ba70d4-373750a3" class="fn-faq-dark-wrapper">
         <h1 id="w-node-c97ba7f9-bd5c-2652-d991-8bf277ba70d5-373750a3" class="heading-8-copy-copy">Marketing and Design Apprenticeship</h1>
-        <h1 id="w-node-c97ba7f9-bd5c-2652-d991-8bf277ba70d7-373750a3" class="heading-8-copy-copy-copy">Part-time, 3-6 months, $1000/ month</h1>
-        <a href="careers/marketing-and-design-apprenticeship.html" class="button-6 w-button">Learn More</a>
+        <h1 id="w-node-c97ba7f9-bd5c-2652-d991-8bf277ba70d7-373750a3" class="heading-8-copy-copy-copy">Applications closed at this time.</h1>
+        <a href="careers/marketing-and-design-apprenticeship.html" class="button-6-copy w-button">Learn More</a>
       </div>
     </div>
     <div id="w-node-c97ba7f9-bd5c-2652-d991-8bf277ba70db-373750a3" class="w-layout-blockcontainer container-24 w-container">
