--- a/careers/marketing-and-design-apprenticeship.html
+++ b/careers/marketing-and-design-apprenticeship.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Jul 29 2024 20:08:06 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Aug 12 2024 19:24:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66564c0681252b50ab00d833" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -124,8 +124,7 @@
       <h1 class="heading-8-copy-copy">Compensation: </h1>
       <p class="margin-bottom-24px-4">- $1000/month on 1099</p>
       <div class="div-block-11"></div>
-      <h1 class="heading-8-copy-copy-copy">To apply to this position, please send an email with the header <br>&quot;Marketing and Design Apprenticeship&quot; and a link to your portfolio to:  </h1>
-      <a href="mailto:careers@yellowdogman.com?subject=Marketing%20and%20Design%20Intern%20Application" class="button-6-copy w-button">careers@yellowdogman.com</a>
+      <h1 class="heading-8-copy-copy-copy">Applications closed at this time.</h1>
     </div>
   </div>
   <section class="footer-dark-3">
