--- a/licensing.html
+++ b/licensing.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Jul 29 2024 20:08:06 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Aug 12 2024 19:24:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65fb4b31d52eb0c89c8db035" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -391,6 +391,29 @@
       </div>
     </div>
   </div>
+  <section class="footer-dark-3">
+    <div class="container-9">
+      <div class="footer-wrapper-2">
+        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 82vw, 158.99620056152344px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
+        <div class="footer-content-2">
+          <div id="w-node-_5993f6c7-141f-9a06-cb94-63b781692eab-81692e9e" class="footer-block-2">
+            <div class="title-small-2">Company</div>
+            <a href="https://www.patreon.com/Resonite" class="footer-link-2">Support Us</a>
+            <a href="https://resonite.com/policies/" target="_blank" class="footer-link-2">Policies</a>
+            <a href="https://yellowdogman.com/contact.html" class="footer-link-2">Contact</a>
+          </div>
+          <div id="w-node-_5993f6c7-141f-9a06-cb94-63b781692eb4-81692e9e" class="footer-block-2">
+            <div class="title-small-2">Resources</div>
+            <a href="https://support.resonite.com/open.php" class="footer-link-2">Get Technical Support</a>
+            <a href="https://moderation.resonite.com/open.php" target="_blank" class="footer-link-2">Submit Moderation Ticket</a>
+            <a href="https://github.com/Yellow-Dog-Man/Resonite-Issues" class="footer-link-2">Github</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer-divider-2"></div>
+    <div class="footer-copyright-center-2">Copyright © 2023 Yellow Dog Man Studios s.r.o.</div>
+  </section>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=656504e52e383d09efa776a6" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
 </body>
