--- a/experimental-pages/home-copy.html
+++ b/experimental-pages/home-copy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Aug 12 2024 19:24:40 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Aug 16 2024 19:07:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="669eaecc190b7550bdebfb68" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -18,10 +18,10 @@
 </head>
 <body class="body">
   <div class="navbar-master">
-    <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
+    <div data-w-id="21ab5999-14dc-a856-5027-e3ad49ba1f23" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="../images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 70vw, (max-width: 991px) 158.99620056152344px, 10vw" alt="" srcset="../images/RSN_Logo_Color_1080-p-500.png 500w, ../images/RSN_Logo_Color_1080-p-800.png 800w, ../images/RSN_Logo_Color_1080-p-1080.png 1080w, ../images/RSN_Logo_Color_1080.png 1081w" class="image-9"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="../images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 70vw, (max-width: 991px) 158.99147033691406px, 100vw" alt="" srcset="../images/RSN_Logo_Color_1080-p-500.png 500w, ../images/RSN_Logo_Color_1080-p-800.png 800w, ../images/RSN_Logo_Color_1080-p-1080.png 1080w, ../images/RSN_Logo_Color_1080.png 1081w" class="image-9"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
@@ -29,6 +29,9 @@
               </li>
               <li>
                 <a href="https://www.patreon.com/Resonite" target="_blank" class="nav-link">Patreon</a>
+              </li>
+              <li>
+                <a href="../merch.html" class="nav-link">Merch</a>
               </li>
               <li>
                 <a href="../licensing.html" class="nav-link">Licensing</a>
@@ -99,6 +102,7 @@
         </div>
       </div>
     </div>
+    <div data-w-id="c55c8366-2b3a-e6ba-0416-c9fc99632842" class="div-block-16"></div>
   </div>
   <div class="div-block-11"></div>
   <div class="w-layout-hflex flex-block-8">
@@ -107,12 +111,12 @@
         <source src="../videos/RSN_MiniTrailer_01_v01_1_1-transcode.webm" data-wf-ignore="true">
       </video></div>
     <div class="div-block-10">
-      <div class="text-block-17">Welcome to Resonite</div>
-      <div class="text-block-20">Create, learn, and explore together. All in one seamless experience.</div>
+      <div data-w-id="3243ad6a-29a7-3fac-c025-d02d6fc8ec74" class="text-block-17">Welcome to Resonite</div>
+      <div data-w-id="eb41f30b-5add-5eff-1a79-b6cb2b2070d1" class="text-block-20">Create, learn, and explore together. All in one seamless experience.</div>
     </div>
   </div>
   <section class="testimonial-column-dark">
-    <div class="container-7">
+    <div data-w-id="937139f4-8804-09ea-19fb-267b49aa28b9" class="container-7">
       <h2 data-w-id="937139f4-8804-09ea-19fb-267b49aa28ba" style="opacity:0" class="centered-heading">An all in one platform,<br>creative tool, and social experience.</h2>
       <div data-w-id="086f8edd-4f2d-c2bf-b2ec-77e2e34ef5f4" style="opacity:0" class="features-wrapper-two">
         <div class="features-left">
