--- a/licensing.html
+++ b/licensing.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Aug 12 2024 19:24:40 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Aug 16 2024 19:07:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65fb4b31d52eb0c89c8db035" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -20,10 +20,10 @@
 </head>
 <body class="body-9-cloudhome">
   <div class="navbar-master">
-    <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
+    <div data-w-id="21ab5999-14dc-a856-5027-e3ad49ba1f23" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 70vw, (max-width: 991px) 158.99620056152344px, 10vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w" class="image-9"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 70vw, (max-width: 991px) 158.99147033691406px, 100vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w" class="image-9"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
@@ -31,6 +31,9 @@
               </li>
               <li>
                 <a href="https://www.patreon.com/Resonite" target="_blank" class="nav-link">Patreon</a>
+              </li>
+              <li>
+                <a href="merch.html" class="nav-link">Merch</a>
               </li>
               <li>
                 <a href="licensing.html" aria-current="page" class="nav-link w--current">Licensing</a>
@@ -101,6 +104,7 @@
         </div>
       </div>
     </div>
+    <div data-w-id="c55c8366-2b3a-e6ba-0416-c9fc99632842" class="div-block-16"></div>
   </div>
   <div class="div-block-11"></div>
   <div class="efi-pr-01">
@@ -111,20 +115,20 @@
         </div>
       </div>
       <div class="efi-pr-01-pricing-grid-wrapper">
-        <div data-current="Tab 1" data-easing="ease" data-duration-in="300" data-duration-out="100" class="efi-pr-01-tab w-tabs">
+        <div data-current="Tab 3" data-easing="ease" data-duration-in="300" data-duration-out="100" class="efi-pr-01-tab w-tabs">
           <div class="efi-pr-01-tab-menu w-tab-menu">
-            <a data-w-tab="Tab 1" class="efi-tab-link black w-inline-block w-tab-link w--current">
+            <a data-w-tab="Tab 1" class="efi-tab-link black w-inline-block w-tab-link">
               <div class="efi-tab-text">Personal and Student</div>
             </a>
             <a data-w-tab="Tab 2" class="efi-tab-link black w-inline-block w-tab-link">
               <div class="efi-tab-text">Commercial and Education</div>
             </a>
-            <a data-w-tab="Tab 3" class="efi-tab-link black w-inline-block w-tab-link">
+            <a data-w-tab="Tab 3" class="efi-tab-link black w-inline-block w-tab-link w--current">
               <div class="efi-tab-text">Enterprise and Government</div>
             </a>
           </div>
           <div class="efi-pr-01-tabs-content w-tab-content">
-            <div data-w-tab="Tab 1" class="efi-pr-01-tab-pane w-tab-pane w--tab-active">
+            <div data-w-tab="Tab 1" class="efi-pr-01-tab-pane w-tab-pane">
               <div class="w-layout-grid efi-pr-01-pricing-grid">
                 <div id="w-node-_22ebd6c1-076f-4699-af43-48b438d2ecb3-9c8db035" class="efi-pr-01-pricing-cell">
                   <div class="efi-pricing-container">
@@ -300,7 +304,7 @@
                 </div>
               </div>
             </div>
-            <div data-w-tab="Tab 3" class="efi-pr-01-tab-pane w-tab-pane">
+            <div data-w-tab="Tab 3" class="efi-pr-01-tab-pane w-tab-pane w--tab-active">
               <div class="w-layout-grid efi-pr-01-pricing-grid">
                 <div id="w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c573-9c8db035" class="efi-pr-01-pricing-cell">
                   <div class="efi-pricing-container">
@@ -330,7 +334,7 @@
                         </div>
                         <div id="w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c593-9c8db035"><img width="21" loading="lazy" alt="" src="images/11151d_128_Checkmark.png"></div>
                         <div>
-                          <div class="efi-option">Priority Technical support</div>
+                          <div class="efi-option">Priority technical support</div>
                         </div>
                         <div id="w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c598-9c8db035"><img width="21" loading="lazy" alt="" src="images/11151d_128_Checkmark.png"></div>
                         <div>
@@ -392,9 +396,9 @@
     </div>
   </div>
   <section class="footer-dark-3">
-    <div class="container-9">
+    <div class="container-9-copy">
       <div class="footer-wrapper-2">
-        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 82vw, 158.99620056152344px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
+        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 77vw, 158.99147033691406px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
         <div class="footer-content-2">
           <div id="w-node-_5993f6c7-141f-9a06-cb94-63b781692eab-81692e9e" class="footer-block-2">
             <div class="title-small-2">Company</div>
