Ensure that our privacy policy is up to date with our existing practices.

--- a/policies/Changelog.html
+++ b/policies/Changelog.html
@@ -15,6 +15,12 @@
         <h1>Policy Changelog</h1>
         <p>For transparency, a list of changes to our polices are presented here.</p>
         <section>
+            <h2>September 11th 2024 - Privacy Policy Corrections</h2>
+            <p>We have corrected our privacy policy to better reflect our collection of sensitive data, such as the collection of date of birth, and receiving data from third party sources.</p>
+            <p>This better reflects our current data practices - particularly for the purpose of moderation.</p>
+            <p>You may review this text on <a href="https://github.com/Yellow-Dog-Man/Resonite-Website/blob/main/policies/PrivacyPolicy.html">GitHub</a></p>
+        </section>
+        <section>
             <h2>June 8th 2024 - Content Licenses</h2>
             <p>We have added our content licenses as a policy page to further clarify how we license our content made for the Resonite platform for our users and other content creators.</p>
             <p>This includes exceptions to our standard content license, for example content made by team members for personal projects or unless otherwise specified for a piece of content.</p>
