--- a/policies/PrivacyPolicy.html
+++ b/policies/PrivacyPolicy.html
@@ -50,7 +50,7 @@
   <div><br /></div>
   <div><strong>What personal information do we process?</strong> When you visit, use, or navigate our Services, we may process personal information depending on how you interact with us and the Services, the choices you make, and the products and features you use. Learn more about <a href="#personalinfo">personal information you disclose to us</a>.</div>
   <div><br /></div>
-  <div><strong>Do we process any sensitive personal information?</strong> We collect and process the user's data of birth for reasons of ensuring users meet our minimum age threshold.</div>
+  <div><strong>Do we process any sensitive personal information?</strong> We collect and process the user's date of birth for reasons of ensuring users meet our minimum age threshold.</div>
   <div><br /></div>
   <div><strong>Do we receive any information from third parties?</strong> We may process information from third parties for reasons of providing moderation of the product and services offered.  Additionally, we may collect information from third parties in order to make various business level decisions, for example, event planning and attendance.</div>
   <div><br /></div>
